# monarch-money-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  server.json  server.py  server_old.py
.github/workflows/: ci.yml  claude-code-review.yml  deploy-pages.yml  publish.yml  regenerate-site.yml
docs/: index.html
scripts/: health_check.py
tests/: test_analytics.py  test_auth_retry.py  test_bulk_updates.py  test_date_autofill.py  test_fastmcp.py  test_integration.py  test_mcp_features.py  test_new_tools.py  test_schema_fixes.py  test_search.py  test_server.py  test_validation.py  test_validation_fastmcp.py
