[project]
name = "monarch-money-mcp"
version = "0.1.0"
description = "MCP server for MonarchMoney financial data access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gql<4.0.0",  # monarchmoney library requires gql 3.x (incompatible with 4.0+)
    "mcp[cli]>=1.9.4",
    "monarchmoney>=0.1.15",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "structlog>=25.4.0",
]

[project.scripts]
monarch-money-mcp = "server:main"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "types-python-dateutil>=2.9.0.20250708",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests"
]
