[project]
name = "monarch-money-mcp"
version = "0.2.0"
description = "MCP server for Monarch Money financial data access - accounts, transactions, budgets, and more"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jamie Dubs", email = "jamie@jamiedubs.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "monarch-money",
    "finance",
    "budgeting",
    "personal-finance",
    "ai",
    "llm",
    "claude"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.9.4",
    "monarchmoneycommunity",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "structlog>=25.4.0",
]

[project.urls]
Homepage = "https://github.com/jamiew/monarch-money-mcp"
Repository = "https://github.com/jamiew/monarch-money-mcp"
Issues = "https://github.com/jamiew/monarch-money-mcp/issues"

[project.scripts]
monarch-money-mcp = "server:main"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "types-python-dateutil>=2.9.0.20250708",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[tool.hatch.build.targets.sdist]
only-include = [
    "server.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.uv.sources]
monarchmoneycommunity = { git = "https://github.com/bradleyseanf/monarchmoneycommunity", rev = "main" }
